# enhanced_mlops

./: .gitignore  README.md  requirements.txt
framework/: .env.example  INSTALL_AND_USAGE.md  LICENSE.txt  Makefile  README.md  pyproject.toml
framework/temlops/aipc_template/.claude/: CLAUDE.md
framework/temlops/aipc_template/.claude/agents/: fairness-engineer.md
framework/temlops/aipc_template/.claude/prompts/: agetns_definition.md
framework/temlops/aipc_template/src/dh_platform/: data_preparation.py  modelling.py  operationalization.py
framework/temlops/aipc_template/src/local_platform/: data_preparation.py  modelling.py  operationalization.py
framework/temlops/config/: pipeline_definitions.yaml
framework/temlops/src/: __about__.py  artifact_types.py  declarative_specs.py  workflow.py
framework/temlops/use_cases/recruitment/metadata/: aipc_local.yaml
framework/temlops/use_cases/spec_test/: README.md  prompts.md  requirements.txt
framework/temlops/use_cases/spec_test/docs/: Datasheet.md  ModelCard.md
framework/temlops/use_cases/spec_test/metadata/: aipc_local.yaml
framework/temlops/use_cases/tabular/: .mcp.json  requirements.txt
framework/temlops/use_cases/tabular/metadata/: aipc_dh.yaml  aipc_local.yaml  fairness_layer_ops.yaml  robustness_layer_ops.yaml
framework/use_cases/nlp/: requirements.txt
framework/use_cases/nlp/src/: =0.26.0  fine_tuning.ipynb  fine_tuning.py
framework/use_cases/tabular/metadata/: aipc.yaml  definitions.yaml
framework/use_cases/tabular/src/: bias_mitigation.ipynb  utils.py
guided_ui/: Notes.md  app.py  (+3 more)
(+76 files in other folders)
